                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 25-07-2005 fixed: SF bug [ 1080749 ] Bidi font flipping doesn't work
 - 25-07-2005 fixed: SF bug [ 1065692 ] RSS does not work for non-Latin character. You can now view any
                       language in the RSS, as long as you use TTF. Hebrew/arabic RSS is flipped.
 - 25-07-2005 changed: playlists - shuffle alters the list, but it can be undone.
                       - randomize plays the list in random order without repeats. 
 - 24-07-2005 fixed: reenabled automatic deinterlacing for dvdplayer if fieldsync is disabled
 - 24-07-2005 added: initial support for syncing interlaced output to interlaced display (enable in settings).
                     Issues: - no good way to find out if a frame is interlaced in mplayer, (syncs when not needed)
                             - causes huge framedrops when playing ntsc video on pal system without pal60
                             - audio/video desync on some files
                             - can only be used when using the "Original Size" zoom mode
 - 23-07-2005 fixed: direct opening of SMB files if no SMB authentication information is in the url
 - 22-07-2005 updated: German language file
 - 22-07-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 22-07-2005 updated: Norwegian language file (Thnx to vnm)
 - 22-07-2005 updated: Chinese (Simple) language file (Thnx to hibaby)
 - 21-07-2005 added: made HTTPAPI callable from Python scripts
 - 21-07-2005 added: warning dialog before tdata deletion. NEW KEY COMBINATION, INSTEAD OF START+BACK USE LTHUMBCLICK+RTHUMBCLICK.