@@ -1393,7 +1393,7 @@ void CGUIWindowMusicBase::OnPopupMenu(int iItem)
   int btn_Delete = 0;
   CStdString strDirectory;
   strDirectory.Format("%s\\playlists", g_stSettings.m_szAlbumDirectory);
-  if (strDirectory.Equals(m_Directory.m_strPath))
+  if (strDirectory.Equals(m_Directory.m_strPath) || g_guiSettings.GetBool("MusicFiles.AllowFileDeletion"))
     btn_Delete = pMenu->AddButton(117);               // Delete
   
   int btn_Settings      = pMenu->AddButton(5);        // Settings...
@@ -1669,14 +1669,16 @@ void CGUIWindowMusicBase::PlayItem(int iItem)
 
 void CGUIWindowMusicBase::OnDeleteItem(int iItem)
 {
-  if ( iItem < 0 || iItem >= m_vecItems.Size() ) return ;
+  if ( iItem < 0 || iItem >= m_vecItems.Size()) return;
   const CFileItem* pItem = m_vecItems[iItem];
-  CStdString strFile;
+  CStdString strPath = pItem->m_strPath;
+  CStdString strFile = CUtil::GetFileName(strPath);
+  if (pItem->m_bIsFolder)
+    CUtil::GetDirectoryName(strPath, strFile);
 
   CGUIDialogYesNo* pDialog = (CGUIDialogYesNo*)m_gWindowManager.GetWindow(WINDOW_DIALOG_YES_NO);
   if (pDialog)
   {
-    strFile = CUtil::GetFileName(pItem->m_strPath);
     pDialog->SetHeading(122);
     pDialog->SetLine(0, 125);
     pDialog->SetLine(1, strFile.c_str());
@@ -1686,23 +1688,38 @@ void CGUIWindowMusicBase::OnDeleteItem(int iItem)
   }
 
   if (m_dlgProgress) m_dlgProgress->StartModal(GetID());
-
-  CStdString strLog;
-  strLog.Format("delete %s\n", strFile.c_str());
-  strFile = pItem->m_strPath;
-
-  CFile::Delete(strFile.c_str());
-
-  if (m_dlgProgress)
+  if (pItem->m_bIsFolder)
   {
-    m_dlgProgress->SetLine(0, 117);
-    m_dlgProgress->SetLine(1, strFile);
-    m_dlgProgress->SetLine(2, L"");
-    m_dlgProgress->Progress();
-  }
+    CStdString strLog;
+    strLog.Format("delete folder %s\n", strFile.c_str());
+    OutputDebugString(strLog.c_str());
 
+    CDirectory::Remove(strPath.c_str());
+    if (m_dlgProgress)
+    {
+      m_dlgProgress->SetLine(0, 117);
+      m_dlgProgress->SetLine(1, strFile);
+      m_dlgProgress->SetLine(2, L"");
+      m_dlgProgress->Progress();
+    }
+  }
+  else
+  {
+    CStdString strLog;
+    strLog.Format("delete %s\n", strFile.c_str());
+    OutputDebugString(strLog.c_str());
+
+    CFile::Delete(strPath.c_str());
+    if (m_dlgProgress)
+    {
+      m_dlgProgress->SetLine(0, 117);
+      m_dlgProgress->SetLine(1, strFile);
+      m_dlgProgress->SetLine(2, L"");
+      m_dlgProgress->Progress();
+    }
+  }
   if (m_dlgProgress) m_dlgProgress->Close();
 
-  Update( m_Directory.m_strPath );
+  Update(m_Directory.m_strPath);
   m_viewControl.SetSelectedItem(iItem);
 }
