@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 25-07-2005 added: file deletion from all three media window context menus, enable the "Allow File Deletion" option
+			settings: video -> files, music -> files, pictures -> general
  - 25-07-2005 fixed: SF bug [ 1080749 ] Bidi font flipping doesn't work
  - 25-07-2005 fixed: SF bug [ 1065692 ] RSS does not work for non-Latin character. You can now view any
                        language in the RSS, as long as you use TTF. Hebrew/arabic RSS is flipped.
